# punjab

./: .gitignore  .travis.yml  CHANGELOG.txt  Dockerfile  INSTALL.txt  LICENSE.txt  MANIFEST.in  README.txt  docker-compose.yml  docker.sh  punjab.tac  pyproject.toml  requirements.txt  run.py  run_tests.sh  setup.py
.github/workflows/: ci.yml
html/: index.html
punjab/: INSTALL.txt  __init__.py  error.py  httpb.py  httpb_client.py  jabber.py  patches.py  punjab.tac  session.py  ssh.py  ssl.py  stream.py  tap.py
punjab/html/: index.html
punjab/punjab/: error.py  jabber.py  session.py  tap.py
punjab/test/: testparser.py
punjab/tests/: testparser.py  xep124.py
punjab/xmpp/: error.py  ns.py  server.py
tests/: httpb_client.py  test_basic.py  testparser.py  xep124.py  xep206.py
twisted/plugins/: punjab.py  punjab_plugin.py
